src/test/deca/context/valid/if_then_else.deca
// Description :
// test d'un if then else
//
// Résultats :
// ok

{
  if (true) {
    println("true");
  } else {
    println("false");
  }
}
