src/test/deca/context/invalid/if_then_else_string.deca
// Description :
// test d'un if then else avec une condition non-booléenne
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : La condition n'est pas un booléen (règle 3.22)

{
  if ("Hello") {
    println("true");
  } else {
    println("false");
  }
}
